# PythonAIAgents

./: .gitignore  Makefile
cucumber-agent/: Makefile  README.md  main.py  requirements.txt
docker-compose/: docker-compose-ollama.yaml
jupyterlab/: Makefile  README.md
jupyterlab/notebooks/: chat_models.ipynb  langchain-rag.ipynb
langchain/: main.py  requirements.txt
sample1/: Makefile  pyproject.toml  requirements.txt
sample1/docker-compose/: docker-compose.yaml  init.sql
sample1/src/: controller.py  functions.py  main.py  slack.py
sample2/: Makefile  main.py
sample3/: Makefile  requirements.txt
sample3/src/sample3/: basics.py  basics_2.py  main.py
sample3/src/sample3/tools/: __init__.py  image.py  weather.py
