[tool.poetry]
name = "sample1"
version = "0.0.1"
description = "TOML requirement file"
authors = ["marcellorego <marcellorego@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.8"
Flask="^3.0.3"
waitress="^3.0.0"
slack-sdk="^3.31.0"
slack-bolt="^1.19.1"


#openai==1.40.3??


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"